tests/verify/check_lua_01.out
check_lua_01.ml[1:1 ..1:28]: warning (W3003)
  Syntax error in definition of x
  │ 
1 │ external val x : int = "x x"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

definition of x[1:3 ..1:3]: error 
  Unexpected x, expected one of and, or, '+', '-', '*', '/', '%', '..', '==', '~=', '<', '>', '<=', '>='
  │ 
1 │ x x
  │   ^
check_lua_01.ml[3:1 ..3:33]: warning (W3003)
  Syntax error in definition of x
  │ 
3 │ external val x : int = "return 0"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

definition of x[1:1 ..1:6]: error 
  Unexpected return, expected one of false, function, nil, not, true, '...', '(', '{', '-', '#', identifier, quasi-quoted expression, quasi-quoted variable, int, float, string
  │ 
1 │ return 0
  │ ^^^^^^
check_lua_01.ml[5:1 ..10:4]: warning (W3003)
  Syntax error in definition of x
   │ 
 5 │ external val x : int -> int = "function(x)\
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

definition of x[4:3 ..4:5]: error 
  Unexpected end, expected one of false, function, nil, not, true, '...', '(', '{', '-', '#', identifier, quasi-quoted expression, quasi-quoted variable, int, float, string
  │ 
4 │   end
  │   ^^^
